Changed document font to Droid Sans, created a basic Title Page

--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,10 @@
 \usepackage{subcaption}
 \usepackage{hyperref}
 \usepackage[scaled=0.90]{helvet}
+\usepackage[defaultsans]{droidsans}
+\usepackage[T1]{fontenc}
+
+\renewcommand*\familydefault{\sfdefault}
 
 \graphicspath{{images/}}
 
@@ -31,6 +35,7 @@
 
 
 \begin{document}
+    \input{titlepage}
     \tableofcontents
     \listoffigures
     \chapter{Data Understanding}
