--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,7 @@
 \usepackage[scaled=0.90]{helvet}
 \usepackage[defaultsans]{droidsans}
 \usepackage[T1]{fontenc}
+\usepackage{array}
 
 \renewcommand*\familydefault{\sfdefault}
 
