Fixed Data types

--- a/titlepage.tex
+++ b/titlepage.tex
@@ -3,7 +3,7 @@
     \includegraphics[width=0.30\textwidth]{images/cherubino_black.pdf}\par\vspace{1cm}
     {\scshape\LARGE Università di Pisa \par}
     \vspace{1cm}
-    {\scshape\Large Progetto per il corso di Data Mining\par}
+    {\scshape\Large Progetto per il corso di Data Mining\\A.A. 2017/2018\par}
     \vspace{1.5cm}
     {\huge\bfseries Analisi del Dataset\\ Human Resources Analytics\par}
     \vspace{2cm}
