--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,8 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[italian]{babel}
-\usepackage[adobe-utopia]{mathdesign}
+\usepackage{libertine}
+\usepackage{libertinust1math}
 \usepackage{graphicx}
 \usepackage[a4paper,width=150mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
 \usepackage[framemethod=default]{mdframed}
