--- a/titlepage.tex
+++ b/titlepage.tex
@@ -7,6 +7,6 @@
     \vspace{1.5cm}
     {\huge\bfseries Analisi del Dataset\\ Human Resources Analytics\par}
     \vspace{2cm}
-    {\Large Gianmarco Ricciarelli \& Maria Cristina Uccheddu\par}
+    {\Large Gianmarco Ricciarelli \& Maria Cristina Uccheddu \& Stefano Carpita \par}
     \vfill
 \end{titlepage}
