Fixed alignment with figure

--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,7 @@
 \usepackage[a4paper,width=180mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
 \usepackage[framemethod=default]{mdframed}
 \usepackage{lipsum,titlesec,xcolor,subcaption,hyperref,fancyhdr,array,multicol,float,graphicx,wrapfig,lipsum}
+\usepackage[font=scriptsize]{caption}
 
 \renewcommand*\familydefault{\sfdefault}
 
