--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,7 @@
 \usepackage[italian]{babel}
 \usepackage[a4paper,width=180mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
 \usepackage[framemethod=default]{mdframed}
-\usepackage{lipsum,titlesec,xcolor,subcaption,hyperref,fancyhdr,array,multicol,float,graphicx,wrapfig,lipsum}
+\usepackage{lipsum,titlesec,xcolor,hyperref,fancyhdr,array,multicol,float,graphicx,wrapfig,lipsum,subcaption}
 \usepackage[font=scriptsize]{caption}
 
 \renewcommand*\familydefault{\sfdefault}
