Added notes on first chapter

--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,7 @@
 \usepackage[framemethod=default]{mdframed}
 \usepackage{lipsum,titlesec,xcolor,hyperref,fancyhdr,array,multicol,float,graphicx,wrapfig,lipsum,subcaption}
 \usepackage[font=scriptsize]{caption}
+\usepackage{todonotes}
 
 \renewcommand*\familydefault{\sfdefault}
 
