--- a/main.tex
+++ b/main.tex
@@ -3,13 +3,12 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[italian]{babel}
+\usepackage{times}
 \usepackage[a4paper,width=180mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
 \usepackage[framemethod=default]{mdframed}
 \usepackage{lipsum,titlesec,xcolor,hyperref,fancyhdr,array,multicol,float,graphicx,wrapfig,lipsum,subcaption}
 \usepackage[font=scriptsize]{caption}
 \usepackage{todonotes}
-
-\renewcommand*\familydefault{\sfdefault}
 
 \graphicspath{{images/}}
 
@@ -35,6 +34,7 @@
 
 
 \begin{document}
+    \setmainfont{Time New Roman}
     \input{titlepage}
     \pagenumbering{Roman}
     \tableofcontents
