Addes fontspec package, and Time New Roman to Times New Roman

--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 \usepackage{times}
 \usepackage[a4paper,width=180mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
 \usepackage[framemethod=default]{mdframed}
-\usepackage{lipsum,titlesec,xcolor,hyperref,fancyhdr,array,multicol,float,graphicx,wrapfig,lipsum,subcaption}
+\usepackage{lipsum,titlesec,xcolor,hyperref,fancyhdr,array,multicol,float,graphicx,wrapfig,lipsum,subcaption,fontspec}
 \usepackage[font=scriptsize]{caption}
 \usepackage{todonotes}
 
@@ -34,7 +34,7 @@
 
 
 \begin{document}
-    \setmainfont{Time New Roman}
+    \setmainfont{Times New Roman}
     \input{titlepage}
     \pagenumbering{Roman}
     \tableofcontents
