--- a/main.tex
+++ b/main.tex
@@ -8,12 +8,20 @@
 \usepackage[framemethod=default]{mdframed}
 
 
-\usepackage{lipsum,titlesec,xcolor,hyperref,fancyhdr,array,multicol,float,graphicx,wrapfig,lipsum,subcaption,fontspec,todonotes,enumitem}
+\usepackage{lipsum,titlesec,xcolor,hyperref,fancyhdr,array,multicol,float,graphicx,wrapfig,lipsum,subcaption,fontspec,todonotes,enumitem,comment}
 
 \usepackage[font=scriptsize]{caption}
-
-
 \graphicspath{{images/}}
+
+%% define size for chapter initial page:
+\usepackage{titlesec, blindtext, color}
+\definecolor{gray75}{gray}{0.75}
+\newcommand{\hsp}{\hspace{20pt}}
+\titleformat{\chapter}[hang]{\Huge\bfseries}{\thechapter\hsp\textcolor{gray75}{|}\hsp}{0pt}{\Huge\bfseries}
+
+\titlespacing*{\chapter}{0pt}{-60pt}{20pt} %% change spacing
+%%%%%%%%%%
+
 
 \floatstyle{plain}
 \restylefloat{figure}
