--- a/main.tex
+++ b/main.tex
@@ -3,14 +3,14 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[italian]{babel}
-\usepackage{times}
+\usepackage{helvet}
 \usepackage[a4paper,width=180mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
 \usepackage[framemethod=default]{mdframed}
-
-
 \usepackage{lipsum,titlesec,xcolor,hyperref,fancyhdr,array,multicol,float,graphicx,wrapfig,lipsum,subcaption,fontspec,todonotes,enumitem,comment}
-
 \usepackage[font=scriptsize]{caption}
+
+\renewcommand{\familydefault}{\sfdefault}
+
 \graphicspath{{images/}}
 
 %% define size for chapter initial page:
