--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt, twoside]{report}
+\documentclass[10pt, twoside,twocolumn]{report}
 
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -7,8 +7,9 @@
 \usepackage[a4paper,width=180mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
 \usepackage[framemethod=default]{mdframed}
 \usepackage{lipsum,titlesec,xcolor,hyperref,fancyhdr,array,multicol,float,graphicx,wrapfig,lipsum,subcaption,fontspec,todonotes,enumitem,comment,capt-of,booktabs}
-\usepackage[font=scriptsize]{caption}
+\usepackage[font=normalsize]{caption}
 \DeclareCaptionLabelFormat{andtable}{#1˜#2 \& \tablename˜\thetable}
+
 
 \renewcommand{\familydefault}{\sfdefault}
 
