--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,6 @@
 \documentclass[10pt, twoside]{report}
-
 \usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
+%%\usepackage[utf8]{inputenc}
 \usepackage[italian]{babel}
 \usepackage{helvet}
 \usepackage[a4paper,width=180mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
