Added script to print latex file from kmeans distribution

--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,8 @@
 \usepackage{helvet}
 \usepackage[a4paper,width=180mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
 \usepackage[framemethod=default]{mdframed}
-\usepackage{lipsum,titlesec,xcolor,hyperref,fancyhdr,array,multicol,float,graphicx,wrapfig,lipsum,subcaption,fontspec,todonotes,enumitem,comment,capt-of,amsmath,booktabs}
+\usepackage{lipsum,titlesec,xcolor,hyperref,fancyhdr,array,multicol,float,graphicx,wrapfig,subcaption}
+\usepackage{fontspec,todonotes,enumitem,comment,capt-of,amsmath,booktabs}
 \usepackage[font=scriptsize]{caption}
 \DeclareCaptionLabelFormat{andtable}{#1˜#2 \& \tablename˜\thetable}
 
