Updated print script

--- a/code/kmeans/kmeans_distribution.tex
+++ b/code/kmeans/kmeans_distribution.tex
@@ -17,7 +17,7 @@
 		\end{tabular}
 	}
 	\caption{}
-	\label{tab:}
+	\label{tab:dist_Average_Montly_Hours}
 	\end{subtable}
 	\begin{subtable}{0.4\textwidth}
 		\resizebox{\textwidth}{!}{
@@ -36,7 +36,7 @@
 		\end{tabular}
 	}
 	\caption{}
-	\label{tab:}
+	\label{tab:dist_Last_Evaluation}
 	\end{subtable}
 	\begin{subtable}{0.4\textwidth}
 		\resizebox{\textwidth}{!}{
@@ -55,7 +55,7 @@
 		\end{tabular}
 	}
 	\caption{}
-	\label{tab:}
+	\label{tab:dist_Number_Project}
 	\end{subtable}
 	\begin{subtable}{0.4\textwidth}
 		\resizebox{\textwidth}{!}{
@@ -74,7 +74,7 @@
 		\end{tabular}
 	}
 	\caption{}
-	\label{tab:}
+	\label{tab:dist_Satisfaction_Level}
 	\end{subtable}
 	\begin{subtable}{0.4\textwidth}
 		\resizebox{\textwidth}{!}{
@@ -93,25 +93,6 @@
 		\end{tabular}
 	}
 	\caption{}
-	\label{tab:}
-	\end{subtable}
-	\begin{subtable}{0.4\textwidth}
-		\resizebox{\textwidth}{!}{
-		\begin{tabular}{| c | c | c | c | c | c |}
-		\hline
-		{} & \multicolumn{5}{c |}{Left} \\
-		\hline
-		{} & count & mean & std & min & max \\
-		Cluster & & & & &  \\
-		\hline
-		0 & 1827.0 & 0.525998905309 & 0.499460306758 & 0.0 & 1.0 \\
-		1 & 4725.0 & 0.0139682539683 & 0.117371450605 & 0.0 & 1.0 \\
-		2 & 3103.0 & 0.505639703513 & 0.500048774278 & 0.0 & 1.0 \\
-		3 & 5344.0 & 0.18244760479 & 0.386249133703 & 0.0 & 1.0 \\
-		\hline
-		\end{tabular}
-	}
-	\caption{}
-	\label{tab:}
+	\label{tab:dist_Time_Spend_Company}
 	\end{subtable}
 	\end{table}
