Updated cluster description and distribution printer script

--- a/code/kmeans/kmeans_distribution.tex
+++ b/code/kmeans/kmeans_distribution.tex
@@ -4,15 +4,15 @@
 		\resizebox{\textwidth}{!}{
 		\begin{tabular}{| c | c | c | c | c | c |}
 		\hline
-		{} & \multicolumn{5}{c |}{Average_Montly_Hours} \\
+		{} & \multicolumn{5}{c |}{Average\_Montly\_Hours} \\
 		\hline
 		{} & count & mean & std & min & max \\
 		Cluster & & & & &  \\
 		\hline
-		0 & 1827.0 & 0.698637110016 & 0.218697862075 & 0.01 & 1.0 \\
-		1 & 4725.0 & 0.335532275132 & 0.119316415166 & 0.0 & 0.57 \\
-		2 & 3103.0 & 0.265787947148 & 0.131664012333 & 0.0 & 0.88 \\
-		3 & 5344.0 & 0.687971556886 & 0.0978289611919 & 0.32 & 1.0 \\
+		0 & 4718.0 & 0.335402713014 & 0.119339203198 & 0.0 & 0.57 \\
+		1 & 3112.0 & 0.266349614396 & 0.131965498666 & 0.0 & 0.88 \\
+		2 & 5343.0 & 0.687986150103 & 0.0978323000066 & 0.32 & 1.0 \\
+		3 & 1826.0 & 0.698707557503 & 0.218737034635 & 0.01 & 1.0 \\
 		\hline
 		\end{tabular}
 	}
@@ -23,15 +23,15 @@
 		\resizebox{\textwidth}{!}{
 		\begin{tabular}{| c | c | c | c | c | c |}
 		\hline
-		{} & \multicolumn{5}{c |}{Last_Evaluation} \\
+		{} & \multicolumn{5}{c |}{Last\_Evaluation} \\
 		\hline
 		{} & count & mean & std & min & max \\
 		Cluster & & & & &  \\
 		\hline
-		0 & 1827.0 & 0.796316365627 & 0.147503706565 & 0.36 & 1.0 \\
-		1 & 4725.0 & 0.729282539683 & 0.154948072349 & 0.36 & 1.0 \\
-		2 & 3103.0 & 0.556313245247 & 0.116995791894 & 0.36 & 1.0 \\
-		3 & 5344.0 & 0.769805389222 & 0.159894920111 & 0.36 & 1.0 \\
+		0 & 4718.0 & 0.72940652819 & 0.154968000745 & 0.36 & 1.0 \\
+		1 & 3112.0 & 0.556725578406 & 0.117328197911 & 0.36 & 1.0 \\
+		2 & 5343.0 & 0.769792251544 & 0.159907000653 & 0.36 & 1.0 \\
+		3 & 1826.0 & 0.796243154436 & 0.147510906101 & 0.36 & 1.0 \\
 		\hline
 		\end{tabular}
 	}
@@ -42,15 +42,15 @@
 		\resizebox{\textwidth}{!}{
 		\begin{tabular}{| c | c | c | c | c | c |}
 		\hline
-		{} & \multicolumn{5}{c |}{Number_Project} \\
+		{} & \multicolumn{5}{c |}{Number\_Project} \\
 		\hline
 		{} & count & mean & std & min & max \\
 		Cluster & & & & &  \\
 		\hline
-		0 & 1827.0 & 0.729720853859 & 0.185474964781 & 0.0 & 1.0 \\
-		1 & 4725.0 & 0.372952380952 & 0.171968304809 & 0.0 & 1.0 \\
-		2 & 3103.0 & 0.0869481147277 & 0.133423646049 & 0.0 & 0.8 \\
-		3 & 5344.0 & 0.382410179641 & 0.177925827288 & 0.0 & 0.8 \\
+		0 & 4718.0 & 0.373251377702 & 0.171899268358 & 0.0 & 1.0 \\
+		1 & 3112.0 & 0.087146529563 & 0.133356468399 & 0.0 & 0.8 \\
+		2 & 5343.0 & 0.382481751825 & 0.177865527878 & 0.0 & 0.8 \\
+		3 & 1826.0 & 0.730010952903 & 0.185110703318 & 0.0 & 1.0 \\
 		\hline
 		\end{tabular}
 	}
@@ -61,15 +61,15 @@
 		\resizebox{\textwidth}{!}{
 		\begin{tabular}{| c | c | c | c | c | c |}
 		\hline
-		{} & \multicolumn{5}{c |}{Satisfaction_Level} \\
+		{} & \multicolumn{5}{c |}{Satisfaction\_Level} \\
 		\hline
 		{} & count & mean & std & min & max \\
 		Cluster & & & & &  \\
 		\hline
-		0 & 1827.0 & 0.174362342638 & 0.103855395217 & 0.09 & 0.63 \\
-		1 & 4725.0 & 0.753714285714 & 0.149056384411 & 0.29 & 1.0 \\
-		2 & 3103.0 & 0.426306799871 & 0.113094729193 & 0.09 & 0.96 \\
-		3 & 5344.0 & 0.746482035928 & 0.146299837917 & 0.25 & 1.0 \\
+		0 & 4718.0 & 0.753912674862 & 0.149069029588 & 0.29 & 1.0 \\
+		1 & 3112.0 & 0.426690231362 & 0.113426667634 & 0.09 & 0.96 \\
+		2 & 5343.0 & 0.746524424481 & 0.146280707568 & 0.25 & 1.0 \\
+		3 & 1826.0 & 0.174364731654 & 0.103883794638 & 0.09 & 0.63 \\
 		\hline
 		\end{tabular}
 	}
@@ -80,15 +80,15 @@
 		\resizebox{\textwidth}{!}{
 		\begin{tabular}{| c | c | c | c | c | c |}
 		\hline
-		{} & \multicolumn{5}{c |}{Time_Spend_Company} \\
+		{} & \multicolumn{5}{c |}{Time\_Spend\_Company} \\
 		\hline
 		{} & count & mean & std & min & max \\
 		Cluster & & & & &  \\
 		\hline
-		0 & 1827.0 & 0.294384236453 & 0.145623601942 & 0.0 & 1.0 \\
-		1 & 4725.0 & 0.135369312169 & 0.151142754401 & 0.0 & 1.0 \\
-		2 & 3103.0 & 0.16555913632 & 0.152395660788 & 0.0 & 1.0 \\
-		3 & 5344.0 & 0.216753368263 & 0.212346308411 & 0.0 & 1.0 \\
+		0 & 4718.0 & 0.135247986435 & 0.151055406452 & 0.0 & 1.0 \\
+		1 & 3112.0 & 0.165690874036 & 0.152454170381 & 0.0 & 1.0 \\
+		2 & 5343.0 & 0.216769605091 & 0.212362864942 & 0.0 & 1.0 \\
+		3 & 1826.0 & 0.294408543264 & 0.14565978606 & 0.0 & 1.0 \\
 		\hline
 		\end{tabular}
 	}
