Started Frequent Itemsets mining

--- a/main.tex
+++ b/main.tex
@@ -55,6 +55,7 @@
     \input{chapters/1}
     \chapter{Clustering analysis}
     \input{chapters/2}
-    \chapter{Association Rules}
+    \chapter{Association Rules Mining}
+    \input{chapters/3}
     \chapter{Classification}
 \end{document}
