--- a/main.tex
+++ b/main.tex
@@ -59,4 +59,5 @@
     \chapter{Association Rules Mining}
     \input{chapters/3}
     \chapter{Classification}
+    \input{chapters/4}
 \end{document}
