--- a/titlepage.tex
+++ b/titlepage.tex
@@ -7,6 +7,6 @@
     \vspace{1.5cm}
     {\huge\bfseries Analisi del Dataset\\ Human Resources Analytics\par}
     \vspace{2cm}
-    {\Large Gianmarco Ricciarelli \\ Maria Cristina Uccheddu \\ Stefano Carpita \par}
+    {\Large Gianmarco Ricciarelli 555396 \\ Maria Cristina Uccheddu 543932 \\ Stefano Carpita 304902 \par}
     \vfill
 \end{titlepage}
